# hessra-sdk.rs

./: .gitignore  CONFIG.md  Cargo.toml  README.md  REFACTOR_PROJECT.md  ROADMAP.md
.cargo/: audit.toml
.github/workflows/: ci.yml  publish-python.yml  test_ffi.yml  trunk-build-publish.yml
certs/: argo-cli1.key.pem  argo-cli1.pem  node1.key  node2.key  service_nodes.toml  service_public_key.pem
examples/: config_methods_example.rs  http1_example.rs  http3_example.rs  macro_authorize_example.rs  macro_request_example.rs  public_key_example.rs  service_chain.rs  unified_sdk.rs
hessra-api/: Cargo.toml  README.md
hessra-api/examples/: client_example.rs  http3_example.rs
hessra-api/src/: lib.rs
hessra-cli/: Cargo.toml  README.md
hessra-cli/examples/: cli_integration_test.rs
hessra-cli/resources/: hessra_unicode_logo.txt
hessra-cli/src/: cli.rs  config.rs  error.rs  main.rs
hessra-cli/src/commands/: authorize.rs  identity.rs  mod.rs
hessra-config/: Cargo.toml  README.md
hessra-config/examples/: config_methods.rs
hessra-config/src/: lib.rs
hessra-config/tests/: config_test.rs
hessra-ffi/: Cargo.toml  README.md  build.rs  hessra_ffi.h
hessra-ffi/examples/: test.c
hessra-ffi/include/: hessra.h
hessra-ffi/scripts/: run_tests.sh
hessra-ffi/src/: config.rs  error.rs  lib.rs  token.rs
hessra-ffi/tests/: ffi_tests.rs
hessra-macros/: Cargo.toml  README.md
hessra-macros/src/: lib.rs
hessra-pg/hessra_authz/: Cargo.toml
hessra-pg/hessra_authz/src/: lib.rs
hessra-pgrx/hessra_authz/: Cargo.toml  README.md  Trunk.toml  hessra_authz.control
hessra-pgrx/hessra_authz/src/: lib.rs
hessra-py/: Cargo.toml  README.md  pyproject.toml
hessra-py/examples/: comprehensive_example.py  identity_token_example.py  verification_only_example.py
hessra-py/src/: client.rs  config.rs  lib.rs  response.rs
hessra-sdk/: Cargo.toml  README.md
hessra-sdk/examples/: domain_restricted_identity.rs  http1_example.rs  http3_example.rs  identity_token.rs  multi_party_auth.rs  service_chain.rs
hessra-sdk/src/: lib.rs
hessra-sdk/tests/: integration_test.rs
hessra-token/: Cargo.toml  README.md
hessra-token-authz/: Cargo.toml  README.md
hessra-token-authz/examples/: capability_verification.rs  latent_capability_token.rs  revocation_demo_authz.rs  token_attestation.rs  token_verification.rs
hessra-token-authz/src/: attenuate.rs  attest.rs  lib.rs  mint.rs  revocation.rs  verify.rs
hessra-token-core/: Cargo.toml
hessra-token-core/src/: classifier.rs  error.rs  lib.rs  rule_parser.rs  utils.rs
hessra-token-identity/: Cargo.toml  README.md
hessra-token-identity/examples/: inspect_token.rs  revocation_demo_identity.rs
hessra-token-identity/src/: attenuate.rs  inspect.rs  jit.rs  lib.rs  mint.rs  revocation.rs  verify.rs
hessra-token/examples/: token_attenuation.rs  token_verification.rs
hessra-token/src/: attenuate.rs  attest.rs  error.rs  lib.rs  mint.rs  token.rs  utils.rs  verify.rs
hessra-token/tests/: service_chain_tokens.json  test_tokens.json
project-docs/: 001-refactor-project.md  002-cffi.md
src/: attenuate.rs  config.rs  lib.rs  verify.rs
tests/: README.md  client_builder_test.rs  config_test.rs  integration_test.rs
