[package]
name = "hessra-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Jake Valentic <jake@hessra.net>"]
description = "Hessra authorization service SDK for Rust"

[workspace]
members = ["hessra-macros"]

[dependencies]
hessra-macros = { path = "hessra-macros", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
h3 = { version = "0.0.6", optional = true }
h3-quinn = { version = "0.0.7", optional = true }
quinn = { version = "0.11", optional = true }
quinn-proto = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.1.2", optional = true }
bytes = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1.36", features = ["full"] }
http = "1.0"
anyhow = "1.0"

[features]
default = []
http3 = ["h3", "h3-quinn", "quinn", "quinn-proto", "rustls", "rustls-pemfile", "bytes", "futures"]

[[example]]
name = "http1_example"
path = "examples/http1_example.rs"

[[example]]
name = "http3_example"
path = "examples/http3_example.rs"
required-features = ["http3"]