[workspace]
members = [
    "hessra-token",
    "hessra-config",
    "hessra-api",
    "hessra-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hessra"]
description = "Rust SDK for Hessra authentication services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hessra/hessra-sdk.rs"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.21"
biscuit-auth = "3.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = "0.4"
dirs = "5.0"
hex = "0.4"
thiserror = "1.0"

[package]
name = "hessra-sdk"
version = "0.4.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Jake Valentic <jake@hessra.net>"]
description = "Hessra authorization service SDK for Rust"
repository = "https://github.com/Hessra-Labs/hessra-sdk.rs"
documentation = "https://docs.rs/hessra-sdk"
keywords = ["hessra", "authorization", "rust", "sdk", "biscuit"]
categories = ["authentication", "api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
base64 = "0.22"
biscuit-auth = { version = "6.0.0-beta.2", features = ["pem"] }
chrono = "0.4"
hessra-macros = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
h3 = { version = "0.0.6", optional = true }
h3-quinn = { version = "0.0.7", optional = true }
hex = "0.4"
quinn = { version = "0.11", optional = true }
quinn-proto = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.1.2", optional = true }
bytes = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1.36", features = ["full"] }
http = "1.0"
anyhow = "1.0"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1", "tcp", "client"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
mockito = "1.2"
wiremock = "0.5"
futures-util = "0.3"
tempfile = "3.8"

[features]
default = []
http3 = ["h3", "h3-quinn", "quinn", "quinn-proto", "rustls", "rustls-pemfile", "bytes", "futures"]

[[example]]
name = "http1_example"
path = "examples/http1_example.rs"

[[example]]
name = "http3_example"
path = "examples/http3_example.rs"
required-features = ["http3"]