[package]
name = "hessra-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "API client for Hessra authentication services"
license.workspace = true
repository.workspace = true

[dependencies]
hessra-config = { path = "../hessra-config", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
base64 = { workspace = true }
chrono = { workspace = true }

# Optional HTTP/3 dependencies
h3 = { version = "0.0.2", optional = true }
h3-quinn = { version = "0.0.3", optional = true }
quinn = { version = "0.9", optional = true }
quinn-proto = { version = "0.9", optional = true }
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
bytes = { version = "1.0", optional = true }
http = { version = "0.2", optional = true }

[features]
default = []
http3 = [
    "h3", 
    "h3-quinn", 
    "quinn", 
    "quinn-proto", 
    "rustls", 
    "rustls-pemfile", 
    "bytes", 
    "http"
] 

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[[example]]
name = "http3_example"
path = "examples/http3_example.rs"
required-features = ["http3"] 