[package]
name = "hessra-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "API client for Hessra authentication services"
license.workspace = true
repository.workspace = true

[dependencies]
hessra-config = { path = "../hessra-config", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
base64 = { workspace = true }
chrono = { workspace = true }

# Optional HTTP/3 dependencies
h3 = { version = "0.0.7", optional = true }
h3-quinn = { version = "0.0.9", optional = true }
quinn = { version = "0.11", optional = true }
quinn-proto = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
bytes = { version = "1", optional = true }
http = { version = "1.3", optional = true }
futures = { version = "0.3", optional = true }
url = { version = "2", optional = true }

[features]
default = []
http3 = [
    "h3", 
    "h3-quinn", 
    "quinn", 
    "quinn-proto", 
    "rustls", 
    "rustls-pemfile", 
    "bytes", 
    "http",
    "futures",
    "hessra-config/http3",
    "url"
] 

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[[example]]
name = "http3_example"
path = "examples/http3_example.rs"
required-features = ["http3"] 