[package]
name = "hessra-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "API client for Hessra authentication services"
license.workspace = true
repository.workspace = true

[dependencies]
hessra-config = { path = "../hessra-config", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
base64 = { workspace = true }
chrono = { workspace = true }

# Optional HTTP/3 dependencies
http = { version = "1.3", optional = true }

[features]
default = []
http3 = [
    "http",
    "hessra-config/http3",
    "reqwest/http3"
] 

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[[example]]
name = "http3_example"
path = "examples/http3_example.rs"
required-features = ["http3"] 