[package]
name = "hessra-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Configuration management for Hessra SDK"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true, optional = true }
dirs = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["toml"]
toml = ["dep:toml"] 