[package]
name = "hessra-config"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Configuration management for Hessra SDK"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true, optional = true }
dirs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["toml"]
toml = ["dep:toml"]
http3 = [] 