[package]
name = "hessra-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Jake Valentic <jake@hessra.net>"]
description = "C FFI bindings for Hessra token verification and configuration"
license = "Apache-2.0"
repository = "https://github.com/hessra/hessra-sdk.rs"

[lib]
name = "hessra"
crate-type = ["cdylib", "staticlib"]

[dependencies]
hessra-token = { path = "../hessra-token" }
hessra-config = { path = "../hessra-config" }
libc = "0.2"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.8" 