[package]
name = "hessra-ffi"
version = "0.3.1"
edition = "2021"
authors = ["Jake Valentic <jake@hessra.net>"]
description = "C FFI bindings for Hessra token verification and configuration"
license = "Apache-2.0"
repository = "https://github.com/hessra/hessra-sdk.rs"

[lib]
name = "hessra_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
hessra-token = { path = "../hessra-token", version = "0.3.0" }
hessra-config = { path = "../hessra-config", version = "0.2.0" }
libc = "0.2"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3.8" 