[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
dev-dependencies = ["maturin>=1.0,<2.0", "pytest>=7.0"]

[project]
name = "hessra-py"
description = "Python bindings for Hessra authentication services"
authors = [{ name = "Jake Valentic", email = "jake@hessra.net" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["hessra", "authorization", "authentication", "security", "biscuit"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/hessra/hessra-sdk.rs"
Repository = "https://github.com/hessra/hessra-sdk.rs"
Documentation = "https://docs.rs/hessra-sdk"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hessra_py"
