[package]
name = "hessra-sdk"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Jake Valentic <jake@hessra.net>"]
description = "Hessra authorization service SDK for Rust"
repository = "https://github.com/Hessra-Labs/hessra-sdk.rs"
documentation = "https://docs.rs/hessra-sdk"
keywords = ["hessra", "authorization", "rust", "sdk", "biscuit"]
categories = ["authentication", "api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
hessra-token = { path = "../hessra-token", version = "0.1.0" }
hessra-config = { path = "../hessra-config", version = "0.1.0" }
hessra-api = { path = "../hessra-api", version = "0.1.0" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
http3 = ["hessra-api/http3"]
toml = ["hessra-config/toml"]
wasm = ["hessra-token/wasm"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"

[[example]]
name = "service_chain"
path = "examples/service_chain.rs"

[[example]]
name = "http1"
path = "examples/http1_example.rs"

[[example]]
name = "http3"
path = "examples/http3_example.rs"
required-features = ["http3"]
