[package]
name = "hessra-token"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Token verification and attestation for Hessra SDK"
license.workspace = true
repository.workspace = true

[dependencies]
biscuit-auth = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"] 