[package]
name = "hessra-token"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Token verification and attestation for Hessra SDK"
license.workspace = true
repository.workspace = true

[dependencies]
biscuit-auth = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

# Optional dependencies for WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"] 