[package]
name = "hessra_authz"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Jake Valentic <jake@hessra.net>"]
description = "Postgres Authorization with Local Biscuit Verification — by Hessra"
repository = "https://github.com/Hessra-Labs/hessra-sdk.rs"
documentation = "https://github.com/Hessra-Labs/hessra-sdk.rs/tree/main/hessra-pgrx/hessra_authz"
keywords = ["hessra", "authorization", "rust", "biscuit", "postgres"]
categories = ["security"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_hessra_authz"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = "0.14.3"
hessra-token = { path = "../../hessra-token", version = "0.6.0" }
biscuit-auth = { version = "6.0.0-beta.2", features = ["pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pgrx-tests = "0.14.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
